# Mario

./: CMakeLists.txt  README.md  main.cpp
Framework/: entity.cpp  entity.h  game.cpp  input.cpp  pawn.cpp  pawn.h  render.cpp  render.h  svar.cpp  svar.h
Framework/Core/: action.cpp  action.h  spritesheet.cpp  spritesheet.h
Game/: entity.cpp  entity.h  game.cpp  game.h  input.h  pawn.cpp  pawn.h  svar.h
Game/Core/: action.cpp  action.h  layer.cpp  layer.h  spritesheet.cpp  spritesheet.h
cmake_modules/: FindSFML.cmake
